fixed card alignment, added total picks count, other small changes

--- a/src/index.css
+++ b/src/index.css
@@ -25,8 +25,13 @@ code {
 }
 
 .container {
-  margin: 80px auto 0 auto;
+  margin: 30px auto 0 auto;
   text-align: center;
+}
+
+.pick-view {
+  display: flex;
+  justify-content: center;
 }
 
 .fruit {
